--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,35 @@
-.App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
+.body {
+  background-color: rgb(71, 98, 79);
+  color: aliceblue;
   min-height: 100vh;
+}
+
+.header {
+  background-color: rgb(83, 19, 30);
+}
+
+footer {
   display: flex;
-  flex-direction: column;
-  align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  align-items: center;
+  margin-top: 50px;
 }
 
-.App-link {
-  color: #61dafb;
+footer svg {
+  margin: 10px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.about-container {
+  margin-top: 40px;
+  margin-left: 5px;
+}
+
+.about-container img {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.about-container p {
+  margin-top: 15px;
 }
