--- a/src/App.css
+++ b/src/App.css
@@ -9,6 +9,7 @@
 }
 
 footer {
+  width: auto;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -24,12 +25,18 @@ footer svg {
   margin-left: 5px;
 }
 
-.about-container img {
-  display: block;
-  margin-left: auto;
-  margin-right: auto;
-}
-
 .about-container p {
   margin-top: 15px;
+}
+
+.project-pic {
+  width: 250px;
+  height: auto;
+  margin-left: 25px;
+  margin-bottom: 20px;
+  border: 5px solid rgb(83, 19, 30);
+}
+
+.project-container {
+  margin-top: 50px;
 }
