--- a/src/App.css
+++ b/src/App.css
@@ -4,6 +4,12 @@
   min-height: 100vh;
 }
 
+button {
+  background-color: rgb(83, 19, 30);
+  color: aliceblue;
+  border: none;
+}
+
 .header {
   background-color: rgb(83, 19, 30);
 }
@@ -45,6 +51,13 @@ footer svg {
 
 .project-container {
   margin-top: 50px;
+}
+
+.project-modal {
+  padding: 15px;
+  background-color: rgb(134, 203, 146);
+  color: black;
+  border-radius: 25px;
 }
 
 @media (min-width: 767px) {
