--- a/src/App.css
+++ b/src/App.css
@@ -2,6 +2,8 @@
   background-color: rgb(71, 98, 79);
   color: aliceblue;
   min-height: 100vh;
+  display: flex;
+  flex-direction: column;
 }
 
 .send-button {
@@ -32,8 +34,7 @@ button {
 }
 
 footer {
-  bottom: 0px;
-  width: auto;
+  width: 100vw;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -51,6 +52,7 @@ footer svg {
   margin-left: 15px;
   margin-right: 15px;
   text-indent: 1em;
+  margin-bottom: 50px;
 }
 
 .about-container h2 {
@@ -83,14 +85,6 @@ footer svg {
   background-color: rgb(134, 203, 146);
   color: black;
   border-radius: 25px;
-}
-
-footer {
-  position: absolute;
-  bottom: 0;
-  display: flex;
-  width: 100vw;
-  justify-content: center;
 }
 
 .resume {
